# Projet-C

./: README.md  medaziz.c  terminal.C
gestion Foyer/: Makefile  Makefile.am  Makefile.in  config.status  foyer.glade.bak  foyer.gladep  gestionclient.gladep.bak
gestion Foyer/autom4te.cache/: requests
gestion Foyer/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  excursions.txt  foyer  foyer.c  foyer.h  foyer.txt  interface.c  interface.c.bak  interface.h.bak  main.c  tree.c  tree.h  user.txt
gestion Foyer/src/.deps/: CRUD.Po  callbacks.Po  foyer.Po  tree.Po
